--- a/META.yml
+++ b/META.yml
@@ -12,7 +12,6 @@ build_requires:
   Test::Fatal: '0.010'
   Test::More: '0.98'
   Test::Refcount: '0.07'
-  perl: '5.024'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
@@ -32,76 +31,75 @@ no_index:
 provides:
   Database::Async:
     file: lib/Database/Async.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Backoff:
     file: lib/Database/Async/Backoff.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Backoff::Exponential:
     file: lib/Database/Async/Backoff/Exponential.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::DB:
     file: lib/Database/Async/DB.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Engine:
     file: lib/Database/Async/Engine.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Engine::Empty:
     file: lib/Database/Async/Engine/Empty.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM:
     file: lib/Database/Async/ORM.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM::Constraint:
     file: lib/Database/Async/ORM/Constraint.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM::Extension:
     file: lib/Database/Async/ORM/Extension.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM::Field:
     file: lib/Database/Async/ORM/Field.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM::Schema:
     file: lib/Database/Async/ORM/Schema.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM::Table:
     file: lib/Database/Async/ORM/Table.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::ORM::Type:
     file: lib/Database/Async/ORM/Type.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Pool:
     file: lib/Database/Async/Pool.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Query:
     file: lib/Database/Async/Query.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Row:
     file: lib/Database/Async/Row.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::StatementHandle:
     file: lib/Database/Async/StatementHandle.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Test:
     file: lib/Database/Async/Test.pm
-    version: '0.011'
+    version: '0.012'
   Database::Async::Transaction:
     file: lib/Database/Async/Transaction.pm
-    version: '0.011'
+    version: '0.012'
 requires:
   Class::Method::Modifiers: '0'
-  Database::Async::Engine::PostgreSQL::DDL: '0'
   Future: '0.40'
   Future::AsyncAwait: '0.33'
   IO::Async: '0.68'
   IO::Async::Notifier: '0.68'
-  JSON::MaybeXS: '0'
+  JSON::MaybeUTF8: '0'
   List::Util: '1.50'
   Log::Any: '1.050'
   Module::Load: '0'
   Path::Tiny: '0.108'
   Ryu: '1.008'
   Ryu::Async: '0.016'
-  Scalar::Util: '0'
+  Scalar::Util: '1.50'
   Syntax::Keyword::Try: '0.11'
   URI: '0'
   URI::db: '0.19'
@@ -109,16 +107,13 @@ requires:
   curry: '0'
   indirect: '0'
   mro: '0'
-  overload: '0'
   parent: '0'
   perl: '5.024'
-  strict: '0'
-  warnings: '0'
 resources:
   bugtracker: https://github.com/team-at-cpan/Database-Async/issues
   homepage: https://github.com/team-at-cpan/Database-Async
   repository: https://github.com/team-at-cpan/Database-Async.git
-version: '0.011'
+version: '0.012'
 x_authority: cpan:TEAM
 x_generated_by_perl: v5.30.2
 x_serialization_backend: 'YAML::Tiny version 1.73'
